--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,40 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #396EB0;
+  font-family: 'Titillium Web', sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+img{
+  filter: drop-shadow(1px 1px 8px rgb(13 13 13 / 50%));
+  width: 400px;
+  height: 400px;
+  cursor: pointer;
+}
+
+p {
+  font-size: 40px;
+  color: #F7F7F7;
+  margin-top: 20px;
+}
+
+.area {
+  padding-top: 200px;
+  margin: auto;
+  text-align: center;
+}
+
+@media screen and (max-width:600px){
+  img{
+    width: 150px;
+    height: 150px;
+  }
+  p {
+    font-size: 22px;
+    margin-top: 30px;
+  }
 }
