--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,4 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<p>hello world</p>
+<div class="area">
+    <img src="/img/SosiJi.png" onclick="window.open('https://github.com/SO-SI-JI/Accident-Here-Server')">
+    <p>Accident-Here Server</p>
+</div>
