--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,9 +2,16 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"/>
+    <link rel="stylesheet" href="/stylesheets/mdb.min.css"/>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
     {{{body}}}
   </body>
+  <script type="text/javascript" src="/js/mdb.min.js"></script>
 </html>
